--- a/tmux.conf
+++ b/tmux.conf
@@ -51,5 +51,13 @@ set -g history-limit 10000
 # Use UTF-8 in the status bar.
 set-option -g status-utf8 on
 
+## Misc
+
+# Number windows from 1.
+set -g base-index 1
+
+# Don't wait after escape.
+set -s escape-time 0
+
 # Always start a new session if one isn't running.
 new-session
