Add tmux status bar toggle keybind.

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,9 @@ bind-key C-a last-window
 # Reload tmux config.
 bind r source-file ~/.tmux.conf
 
+# Toggle the status bar.
+bind b set -g status
+
 # VI keybindings please
 setw -g mode-keys vi
 
