Hide tmux status bar by default.

--- a/tmux.conf
+++ b/tmux.conf
@@ -54,6 +54,9 @@ set -g history-limit 10000
 # Use UTF-8 in the status bar.
 set-option -g status-utf8 on
 
+# Hide status bar by default.
+set -g status off
+
 ## Misc
 
 # Number windows from 1.
