Change the tmux escape sequence to backtick.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,10 @@
 ## Keybindings
 
-# Make it use C-a, similar to screen.
+# Make the escape sequence `
 unbind C-b
 unbind l
-set -g prefix C-a
-bind-key C-a last-window
+set -g prefix `
+bind-key ` last-window
 
 # Reload tmux config.
 bind r source-file ~/.tmux.conf
