Switch tmux escape back to C-a.

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,9 +2,8 @@
 
 # Make the escape sequence `
 unbind C-b
-unbind l
-set -g prefix `
-bind-key ` last-window
+set -g prefix C-a
+bind-key C-a last-window
 
 # Reload tmux config.
 bind r source-file ~/.tmux.conf
