tmux: swtich back to [ for copy mode.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 ## Keybindings
 
-# Make the escape sequence `
+# Modify the escape sequence
 unbind C-b
 set -g prefix C-a
 bind-key C-a last-window
@@ -22,8 +22,6 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 # vim-like copy/paste (http://jasonwryan.com/blog/2011/06/07/copy-and-paste-in-tmux/)
-unbind [
-bind Escape copy-mode
 unbind p
 bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
