Add aggressive resizing for tmux.

--- a/tmux.conf
+++ b/tmux.conf
@@ -61,3 +61,6 @@ set -g base-index 1
 
 # Don't wait after escape.
 set -s escape-time 0
+
+# Resize within each window.
+setw -g aggressive-resize on
