--- a/tmux.conf
+++ b/tmux.conf
@@ -21,10 +21,10 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-bind-key C-h resize-pane -L 15
-bind-key C-j resize-pane -D 10
-bind-key C-k resize-pane -U 10
-bind-key C-l resize-pane -R 15
+bind-key H resize-pane -L 10
+bind-key J resize-pane -D 10
+bind-key K resize-pane -U 10
+bind-key L resize-pane -R 10
 
 # vim-like copy/paste (http://jasonwryan.com/blog/2011/06/07/copy-and-paste-in-tmux/)
 unbind p
