--- a/tmux.conf
+++ b/tmux.conf
@@ -29,8 +29,6 @@ bind-key L resize-pane -R 10
 # vim-like copy/paste (http://jasonwryan.com/blog/2011/06/07/copy-and-paste-in-tmux/)
 unbind p
 bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
 
 # vim-style window splitting.
 bind s split-window -v
@@ -53,9 +51,6 @@ set -g status-attr bright
 # Higher history limit.
 set -g history-limit 10000
 
-# Use UTF-8 in the status bar.
-set-option -g status-utf8 on
-
 # Hide status bar by default.
 set-option -g status off
 
@@ -69,3 +64,7 @@ set -s escape-time 0
 
 # Resize within each window.
 setw -g aggressive-resize on
+
+# Set shell.
+set -g default-command /bin/zsh
+set -g default-shell /bin/zsh
